--- a/DocumentManagement/DocumentManagement.csproj
+++ b/DocumentManagement/DocumentManagement.csproj
@@ -57,6 +57,7 @@
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.1.2\lib\net462\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -84,6 +85,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DBconnection.cs" />
+    <Compile Include="KeyboardCombinations.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
