--- a/DocumentManagement/packages.config
+++ b/DocumentManagement/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aspose.Zip" version="25.11.0" targetFramework="net472" />
   <package id="SQLite" version="3.13.0" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
